[gd_scene load_steps=11 format=3 uid="uid://dnrnjgb2yen1t"]

[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_6cy7p"]
[ext_resource type="AudioStream" uid="uid://doacr0e8ll2ma" path="res://Assets/Sound/sigh.ogg" id="3_08swx"]
[ext_resource type="SpriteFrames" uid="uid://vse836nyeq6q" path="res://Assets/Character/CharacterSpriteFrames.tres" id="3_dxt4t"]
[ext_resource type="AudioStream" uid="uid://bskud4tgw0fpl" path="res://Assets/Sound/pickup.ogg" id="4_fk7se"]
[ext_resource type="AudioStream" uid="uid://bpfhcrnegjx6p" path="res://Assets/Sound/drop.ogg" id="5_sdc51"]
[ext_resource type="AudioStream" uid="uid://cdiiy42slv05" path="res://Assets/Sound/can.ogg" id="6_up25q"]
[ext_resource type="AudioStream" uid="uid://c1nebqofns78j" path="res://Assets/Sound/drink.ogg" id="7_rqxh3"]
[ext_resource type="PackedScene" uid="uid://bxyk2ewdcmfwv" path="res://Scenes/Flakes.tscn" id="8_08mrd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ctm2"]
size = Vector2(82.5, 141)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pyes3"]
radius = 12.0
height = 34.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_6cy7p")

[node name="RefreshArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RefreshArea"]
position = Vector2(45, 0)
shape = SubResource("RectangleShape2D_8ctm2")

[node name="Particles" parent="." instance=ExtResource("8_08mrd")]
position = Vector2(49, 14)
emitting = false

[node name="SighPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_08swx")
volume_db = -5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.611328, 0.611328)
sprite_frames = ExtResource("3_dxt4t")
animation = &"walk"

[node name="PickupPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fk7se")

[node name="DropPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sdc51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 34)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pyes3")

[node name="CanPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_up25q")
volume_db = 5.0

[node name="DrinkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rqxh3")
volume_db = -10.0

[connection signal="area_entered" from="RefreshArea" to="." method="_on_refresh_area_area_entered"]
[connection signal="area_exited" from="RefreshArea" to="." method="_on_refresh_area_area_exited"]
